<resources>
    <string name="app_name">Roommate</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="dialog_caption_hint">Caption</string>
    <string name="dialog_url_hint">URL of Photo (Or leave blank for random)</string>
    <string name="dialog_add_title">Add a Photo</string>
    <string name="dialog_edit_title">Edit a Photo</string>
    <string name="login_error">Login Error!</string>
    <string name="no_passwords">You have no passwords</string>
    <string name="action_add">Add</string>
    <string name="action_logout">Logout</string>
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <string name="showPassword">Show password</string>
    <string name="save">Save</string>
    <string name="edit_password_title">Edit Password</string>
    <string name="service">Service</string>
    <string name="add_password_title">Add Password</string>
    <string name="add">Add</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="bank_cards">Bank Cards</string>
    <string name="update_password">Update Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_message">View Message</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="send">Send</string>
    <string name="forget_password">Forget Password?</string>
    <string name="username_email">Username/Email</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="pay">Pay</string>
    <string name="balance">Balance</string>
    <string name="item_name">Item Name</string>
    <string name="item_description">Item Description</string>
    <string name="price">Price</string>
    <string name="create_new_group">Create New Group</string>
    <string name="feedback">Feedback</string>
    <string name="manage_group">Manage Group</string>
    <string name="search">Search</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_price">Sort by Price</string>
    <string name="sort_by_date">Sort by Date</string>
    <string name="member_name">Member Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leave_group">Leave Group</string>
    <string name="view_items">View Items</string>
    <string name="create">Create</string>
</resources>
