<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/group_name"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/item_name"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/group_description"
        android:textColor="#aaaaaa"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignTop="@+id/item_name"
        android:text="@string/balance"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/item_name"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:text="@string/pay" />

</RelativeLayout>